--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: Generate a list of all primes less than or equal
+abstract: 'Generate a list of all primes less than or equal'
 author:
   - 'David Oswald <davido [@at] cpan [d.o.t] org>'
 build_requires:
@@ -10,7 +10,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.62
   Inline::MakeMaker: 0.50
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
 license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,10 +23,10 @@ no_index:
 provides:
   Math::Prime::FastSieve:
     file: lib/Math/Prime/FastSieve.pm
-    version: 0.12
+    version: 0.13
 requires:
   Inline: 0.50
   Inline::C: 0.50
-  Inline::CPP: 0.39
+  Inline::CPP: 0.41
   perl: 5.006000
-version: 0.12
+version: 0.13
